2008-06-30  Guillem Jover  <guillem@debian.org>

	* lib/showpkg.c (parsefield): Remove unneeded 'const char *' cast.

2008-06-30  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (struct arbitraryfield): Make all 'char *' members
	'const'.
	(struct filedetails): Likewise.
	(struct pkginfoperfile): Likewise.
	(struct trigpend): Likewise.

	* lib/parse.c (parsedb): Remove now unneeded 'const char **' casts.
	* src/processarc.c (process_archive): Change size variable before
	assigning the pointer.

2008-06-30  Guillem Jover  <guillem@debian.org>

	* dselect/baselist.cc (baselist::wordwrapinfo): Surround expression
	with parenthesis.
	* dselect/pkgcmds.cc (packagelist::affectedmatches): Likewise.
	(packagelist::affectedrange): Switch a for with an empty body into a
	while.
	* dselect/basecmds.cc (baselist::displayhelp): Likewise.
	* dselect/bindings.cc (keybindings::bind, keybindings::find)
	(keybindings::operator(), keybindings::key2name)
	(keybindings::name2key): Likewise.
	* dselect/main.cc (urq_menu, main): Likewise.
	* dselect/methparse.cc (readmethods, getcurrentopt): Likewise.
	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Likewise.
	* dselect/pkgsublist.cc (packagelist::alreadydone): Likewise.

2008-06-30  Guillem Jover  <guillem@debian.org>

	* lib/trigdeferred.l: Define YY_NO_INPUT to make flex not include
	the unused input() in the resulting object.

2008-06-29  Guillem Jover  <guillem@debian.org>

	* lib/parsedump.h (parseerr, parsemustfield): Remove prototypes.
	(parse_error, parse_warn): New prototypes.
	(parse_must_have_field, parse_ensure_have_field): Likewise.
	* lib/parsehelp.c (parseerr): Split into ...
	(parse_error_msg, parse_error, parse_warn): ... these. New functions.
	Fix all callers.
	(parsemustfield): Split into ...
	(parse_must_have_field, parse_ensure_have_field): ... there. New
	functions. Fix all callers.
	* lib/fields.c (convert_string): Remove now unused warning related
	arguments. Fix all callers.