@@ -22,6 +22,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Support diverting files when origin and destination are on different file
     systems. Based on a patch by Juergen Kreileder. Closes: #102144, #149961
   * Do not silently enable --rename on dpkg-divert --remove. Closes: #160848
+  * Do not allocate memory when lstat fails during package upgrade.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
